--- a/social.html
+++ b/social.html
@@ -32,7 +32,7 @@
             <div class="menuHover">
                 <a class="text-white d-block" href="index.html">HOME</a>
                 <a class="text-white d-block" href="about.html">ABOUT</a>
-                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO</a>
+                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO ▾</a>
                 <div class="text-center" id="dropdown">
                     <a class="text-white d-block" href="development.html">Web Development</a>
                     <a class="text-white d-block" href="social.html">Social Media Marketing</a>
@@ -84,9 +84,6 @@
                         Our professionals will be able to monitor the progress of your pages, analyze followers and insights, 
                         providing you with a report of the results obtained every week. 
                     </p>
-                </div>
-                <div class="bg-primary col">
-                    <!--animation-->
                 </div>
             </div>
             <div class="row mt-5">
