--- a/development.html
+++ b/development.html
@@ -32,7 +32,7 @@
             <div class="menuHover">
                 <a class="text-white d-block" href="index.html">HOME</a>
                 <a class="text-white d-block" href="about.html">ABOUT</a>
-                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO</a>
+                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO ▾</a>
                 <div class="text-center" id="dropdown">
                     <a class="text-white d-block" href="development.html">Web Development</a>
                     <a class="text-white d-block" href="social.html">Social Media Marketing</a>
@@ -81,9 +81,6 @@
                         understand customer requests step by step, creating the website of their choosing geared to follow the 
                         growth of their business. Explore our web design and contact us to start collaborating with us straight away. 
                     </p>
-                </div>
-                <div class="bg-primary col">
-                    <!--animation-->
                 </div>
             </div>
             <div class="row mt-5">
