--- a/hosting.html
+++ b/hosting.html
@@ -32,7 +32,7 @@
             <div class="menuHover">
                 <a class="text-white d-block" href="index.html">HOME</a>
                 <a class="text-white d-block" href="about.html">ABOUT</a>
-                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO</a>
+                <a class="text-white d-block border-bottom" id="dropdownToggle" onclick="dropdownToggle()" href="#">WE DO ▾</a>
                 <div class="text-center" id="dropdown">
                     <a class="text-white d-block" href="development.html">Web Development</a>
                     <a class="text-white d-block" href="social.html">Social Media Marketing</a>
@@ -83,9 +83,6 @@
                     <p class="text-white">
                         We guarantee a stress-free server connection. We'll take care of all the technicalities.
                     </p>
-                </div>
-                <div class="bg-primary col">
-                    <!--animation-->
                 </div>
             </div>
             <div class="row mt-5">
