--- a/social.html
+++ b/social.html
@@ -16,10 +16,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deliver | Social Media Marketing</title>
+    <link rel="icon" href="img/title-logo.png" type="image/icon type">
 </head>
 <body>
     <nav>
-        <a href="index.html"><img class="h-100" src="img/Deliver-t-logo.png" alt=""></a>
+        <a href="index.html"><img id="logo" class="h-100" src="img/Deliver-t-logo.png" alt=""></a>
         <div class="text-white" id="menuToggle" onclick="menuToggle()">☰</div>
     </nav>
 
@@ -28,7 +29,7 @@
     </div>
 
     <div class="bg-dark h-100 w-100" id="menu">
-        <div class="text-center h-75 w-25 margin mb-5 pt-5 d-flex align-items-center justify-content-center">
+        <div class="text-center h-75 w-100 margin mb-5 pt-5 d-flex align-items-center justify-content-center">
             <div class="menuHover">
                 <a class="text-white d-block" href="index.html">HOME</a>
                 <a class="text-white d-block" href="about.html">ABOUT</a>
@@ -62,7 +63,7 @@
                     <div class="line"></div>
                 </div>
                 <div class="row w-75">
-                    <p class="col-8 text-white pl-0 pt-3">
+                    <p class="col-lg-8 col-12 text-white text-lg-left pl-0 pt-3">
                         The Media is the key to the future, a fundamental tool which every modern company requires. With your help, 
                         we will bring your brand to the light and make it the topic that is on everyone’s lips.
                     </p>
@@ -72,7 +73,7 @@
         
         <div class="margin">
             <div class="row">
-                <div class="col-8">
+                <div class="col-lg-8 col-12">
                     <h2 class="text-white mb-5">THE SOCIAL EFFECT</h2>
                     <p class="text-white">
                         In the recent years, social media is becoming one of the most effective ways to grow your business. 
@@ -94,11 +95,11 @@
         </div>
     </div>
 
-    <div class="text-center">
+    <div class="text-lg-center text-left">
         <div class="margin">
             <img class="icon-l" src="img/network.png" alt="">
-            <h2 class="border-short">HOW WE'RE DIFFERENT</h2>
-            <p class="w-75 mx-auto">
+            <h2 class="text-lg-center text-left p-0">HOW WE'RE DIFFERENT</h2>
+            <p class="w-75 mx-lg-auto text-lg-center ml-0 text-left">
                 Our social media marketing team is here to walk you through tried strategies that get results. 
                 Our strategies get your brand noticed, shared, talked about, liked and loved, 
                 no matter the social network, we have the know-how to get you the results your brand requires.
@@ -113,7 +114,9 @@
         <div class="w-75 mx-auto">
             <div>
                 <div class="footer-elements">
-                    <img src="img/D-logo.png" alt="">
+                    <div class="d-none d-lg-block">
+                        <img src="img/D-logo.png" alt="">
+                    </div>
                     <div>
                         <h3 class="text-white">Services</h3>
                         <a href="development.html"><p>Web Development</p></a>
@@ -126,10 +129,12 @@
                         <a href="https://outofthevalley.co.uk/"><p>Out of the Valley</p></a>
                         <a href="https://www.amawaste.co.uk/"><p>AMA Waste Management</p></a>
                     </div>
-                    <a href="https://github.com/JakobLinn/Webbprojekt">
-                        <img class="w-75" src="img/githublogo-w.png" alt="">
-                        <h3 class="text-white">Visit Our Github!</h3>
-                    </a>
+                    <div class="d-none d-lg-block">
+                        <a href="https://github.com/JakobLinn/Webbprojekt">
+                            <img class="w-75" src="img/githublogo-w.png" alt="">
+                            <h3 class="text-white">Visit Our Github!</h3>
+                        </a>
+                    </div>
                     <div>
                         <img src="img/Deliver-v-logo.png" alt="">
                         <p>information@deliver.com</p>
@@ -139,7 +144,7 @@
                 </div>
             </div>
             <div class="footer-end">
-                <div>
+                <div class="d-none d-lg-flex">
                     <img class="icon" src="img/copyright.png" alt="Copyright icon">
                     <h3>Deliver Inc. 2021</h3>
                 </div>
